--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--*Bootstrap linking--> <!--This will need to be changed-->
         <link
           rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
         />
         <!--*other fonts-->
         <link
@@ -26,10 +26,11 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
         ></script>
         <link rel="stylesheet" href="assets/css/style.css" />
-        <title>Work Day Scheduler</title>
+        <title>Project 1</title>
       </head>
 
       <body>
+        <header>hello</header>
 
 
 
