--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
           <!--*Sidebar-->
           <aside class="border-solid border border-black h-auto w-1/6">
             <div class="border">
+              <div class="max-w-sm rounded overflow-hidden shadow-lg">
+                <img class="w-full" src="/card-top.jpeg" alt="Sunset in the mountains">
+                <div class="px-6 py-4">
+                  <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
+                  <p class="text-gray-700 text-base">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+                  </p>
+                </div>
+                <div class="px-6 pt-4 pb-2">
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
+                </div>
+              </div>
               <p>this will be the sidebar</p>
             </div>
           </aside>
@@ -119,6 +133,27 @@
 
 
           </section>
+          <div id="myModal" style="display: none; top: 50%; left: 50%; transform: translateX(-50%); transform: rotateY(-50%);" class="float-left justify-center modal m-auto pt-14 pb-14 border-2 w-4/5 fixed z-50 top-0 left-0 bg-white ">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span style="right: 0; top: 0; position: absolute;" class="close text-sm font-bold cursor-pointer">&times;</span>
+              <label style=" top: 50%; -ms-transform:translateY(-50%); transform: rotateY(-50%);">
+                <h3 class="text-center">Keep Up With The Latest News!</h3>
+                <span class="after:content-['*'] after:ml-0.5 after:text-red-500 block text-sm font-medium text-slate-700">
+                  Name
+                </span>
+                <input type="name" name="firstname" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1" placeholder="First" />
+                <input type="name" name="lastname" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1" placeholder="Last" />
+              </label>
+                <span class="after:content-['*'] after:ml-0.5 after:text-red-500 block text-sm font-medium text-slate-700">
+                  Email
+                </span>
+                <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1" placeholder="you@example.com" />
+              </label>
+            </div>
+          
+          </div>
 
 
 
@@ -129,7 +164,7 @@
         <footer class="text-center h-auto border border-black w-screen bg-sky-400">
           <p>this will be the footer</p>
 
-          <button>Subscribe</button>
+          <button class="cursor-pointer" id="myBtn">Subscribe</button>
 
           <p>testing height auto</p>
 
