--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p>Main article title</p>
                     <button id="testButton">testbutton</button>
                   </div>
-                  <figure class="border border-green-600 h-5/6 m-1 tooltip">
+                  <figure class="border border-green-600 h-5/6 m-1 tooltip w-1/2">
                     <a id="mainArticleLink" href="#" target="_blank">
                       <img 
                       class="object-fit w-full h-full"
