--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@
     <header class="text-center h-16 border border-black w-screen">
       <h1 class="pb-3"></h1>
       <div class="navbar">
-        <a href="#sports">Sports</a>
-        <a href="#science">Science</a>
-        <a href="#politics">Politics</a>
-        <a href="#economics">Economics</a>
-        <a href="#celebrity">Celebrity</a>
-
-        <div class="search-bar"></div>
-        <form action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search" />
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
+        <div class="navigation">
+          <a href="#sports">Sports</a>
+          <a href="#science">Science</a>
+          <a href="#politics">Politics</a>
+          <a href="#economics">Economics</a>
+          <a href="#celebrity">Celebrity</a>
+        </div>
+        <div class="find">
+          <div class="search-bar"></div>
+          <form action="/action_page.php">
+            <input type="text" placeholder="Search.." name="search" />
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
       </div>
     </header>
 
