added function to get non top news stories

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="text-center h-16 border border-black w-screen">
       <h1 class="pb-3"></h1>
       <div class="navbar">
-        <div class="navigation">
+        <div id="navigationBar" class="navigation">
           <a href="#sports">Sports</a>
           <a href="#science">Science</a>
           <a href="#politics">Politics</a>
@@ -102,7 +102,7 @@
           <!--*Main body-->
       <section class="text-center border border-black h-screen w-5/6">
 
-            <div class="border border-green-500 h-16 m-1 flex items-center justify-center">
+            <div id="currentCategory" class="border border-green-500 h-16 m-1 flex items-center justify-center">
               <p>this will be the main body header. CATEGORY: TYPE</p>
             </div>
             <!--*This is the section for the main article-->
