--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <h1 class="pb-3"></h1>
       <div class="navbar">
         <div class="navigation">
-          <a href="#sports">Sports</a>
-          <a href="#science">Science</a>
-          <a href="#politics">Politics</a>
-          <a href="#economics">Economics</a>
-          <a href="#celebrity">Celebrity</a>
+          <a href="#sports" id="Sports">Sports</a>
+          <a href="#science" id="Science">Science</a>
+          <a href="#politics" id="Politics">Politics</a>
+          <a href="#economics" id="Economics">Economics</a>
+          <a href="#celebrity" id="Celebrity">Celebrity</a>
         </div>
         <div class="find">
           <div class="search-bar"></div>
@@ -70,7 +70,7 @@
 
         <div class="flex flex-col h-2/4 border border-red-500 m-1">
           <div class="m-1 border border-orange-500 h-full">
-            <div>
+            <div id="mainTitle"
               <p>Main article title</p>
             </div>
             <div
