--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="text-center h-16 border border-black w-screen">
       <h1 class="pb-3"></h1>
       <div class="navbar">
-        <div id="navigationBar" class="navigation">
+        <div class="navigation">
           <a href="#sports">Sports</a>
           <a href="#science">Science</a>
           <a href="#politics">Politics</a>
@@ -44,7 +44,7 @@
           <div class="search-bar"></div>
           <form action="/action_page.php">
             <input type="text" placeholder="Search.." name="search" />
-            <button type="submit"><i class="fa fa-search"></i>t</button>
+            <button type="submit"><i class="fa fa-search"></i></button>
           </form>
         </div>
       </div>
@@ -56,7 +56,7 @@
       <aside class="border-solid border border-black h-auto w-1/6">
         <div class="border">
           <div class="max-w-sm rounded overflow-hidden shadow-lg">
-            <img class="w-full" src="assets/img/card-top.jpeg" alt="Sunset in the mountains">
+            <img class="w-full" src="/card-top.jpeg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
               <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
               <p class="text-gray-700 text-base">
@@ -68,8 +68,8 @@
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
             </div>
-            <div class="max-w-sm rounded overflow-hidden shadow-lg">
-            <img class="w-full" src="assets/img/card-top.jpeg" alt="Sunset in the mountains">
+            div class="max-w-sm rounded overflow-hidden shadow-lg">
+            <img class="w-full" src="/card-top.jpeg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
               <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
               <p class="text-gray-700 text-base">
@@ -82,7 +82,7 @@
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
             </div>
             
-            <img class="w-full" src="assets/img/card-top.jpeg" alt="Sunset in the mountains">
+            <img class="w-full" src="/card-top.jpeg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
               <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
               <p class="text-gray-700 text-base">
@@ -102,7 +102,7 @@
           <!--*Main body-->
       <section class="text-center border border-black h-screen w-5/6">
 
-            <div id="currentCategory" class="border border-green-500 h-16 m-1 flex items-center justify-center">
+            <div class="border border-green-500 h-16 m-1 flex items-center justify-center">
               <p>this will be the main body header. CATEGORY: TYPE</p>
             </div>
             <!--*This is the section for the main article-->
@@ -177,7 +177,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span style="right: 0; top: 0; position: absolute;" class="close text-sm font-bold cursor-pointer">&times;</span>
-        <label style=" top: 50%; -ms-transform:translateY(-50%); transform: rotateY(-50%);" />
+        <label style=" top: 50%; -ms-transform:translateY(-50%); transform: rotateY(-50%);">
           <h3 class="text-center">Keep Up With The Latest News!</h3>
           <span class="after:content-['*'] after:ml-0.5 after:text-red-500 block text-sm font-medium text-slate-700">
             Name
