--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <!--*Sidebar-->
           <!--*Sidebar-->
-          <aside class="border-solid border border-black h-auto w-1/6">
+          <aside class="border-solid border border-black h-auto w-1/4">
             <div class="border newssidebar">
               <div class="max-w-sm rounded overflow-hidden shadow-lg">
                 <img class="w-full" src="" alt="Sunset in the mountains">
@@ -73,7 +73,7 @@
           </aside>
 
           <!--*Main body-->
-      <section class="text-center border border-black h-auto w-auto">
+      <section class="text-center border border-black h-auto w-3/4">
 
             <div id="currentCategory" class="border border-green-500 h-16 m-1 flex items-center justify-center">
               <p></p>
@@ -84,7 +84,7 @@
                 <div id="mainArticleTitle">
                   <p></p>
                 </div>
-                <figure class="border border-green-600 h-5/6 m-1 tooltip w-auto">
+                <figure class="border border-green-600 h-5/6 m-1 tooltip w-1/2">
                   <a id="mainArticleLink" href="#" target="_blank">
                     <img 
                     class="object-fit w-full h-full"
