changed one line, should have been in last commit

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <figure class="border border-green-600 h-5/6 m-1 tooltip w-1/2">
                   <a id="mainArticleLink" href="#" target="_blank">
                     <img 
-                    class="object-fit w-full h-full"
+                    class="object-cover w-full h-full"
                     id="mainArticleImage"
                     src="" 
                     alt="Loading"
