--- a/index.html
+++ b/index.html
@@ -80,11 +80,9 @@
             </div>
             <!--*This is the section for the main article-->
             <div class="flex flex-col h-2/4 border border-red-500 m-1">
-              <div class="m-1 border border-orange-500 h-full">
-                <div id="mainArticleTitle">
-                  <p></p>
-                </div>
-                <figure class="border border-green-600 h-5/6 m-1 tooltip w-1/2">
+              <div class="m-1 border border-orange-500 h-full col-span-3">
+                <div id="mainArticleTitle"></div>
+                <figure class="border border-green-600 h-5/6 m-1 tooltip w-3/4">
                   <a id="mainArticleLink" href="#" target="_blank">
                     <img 
                     class="object-cover w-full h-full"
@@ -95,8 +93,16 @@
                     />
                     <figcaption id="tooltiptext"></figcaption>
                   </a>
-                  <p id="mainArticleDescription"></p>
                 </figure>
+                <p id="mainArticleDescription"></p>
+                <div class="inline-flex">
+                  <button id="prevBut" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l">
+                    Prev
+                  </button>
+                  <button id="nextBut" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r">
+                    Next
+                  </button>
+                </div>
               </div>
             </div>
 
