--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </header>
 
-    <main class="p-6 w-screen flex h-auto">
+    <main class="p-6 w-screen flex h-auto lg:w-auto">
 
           <!--*Sidebar-->
           <!--*Sidebar-->
