made some HTML changes, and added the button to the JS

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       </div>
     </header>
 
-    <main class="p-6 w-screen flex h-auto lg:w-auto">
+    <main class="p-6 w-screen flex h-auto sm:grid lg:flex">
 
           <!--*Sidebar-->
           <!--*Sidebar-->
-          <aside class="border-solid border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 p-5 m-3 h-auto w-1/4">
+          <aside class="border-solid border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 p-5 m-3 h-auto lg:w-1/4 sm:w-full">
             <div class="newssidebar">
               <div class="max-w-sm rounded overflow-hidden transition">
                 <img class="w-full" src="" alt="Sunset in the mountains">
@@ -73,7 +73,7 @@
           </aside>
 
           <!--*Main body-->
-      <section class="text-center h-auto w-3/4">
+      <section class="text-center h-auto lg:w-3/4 sm:w-full">
 
             <div id="currentCategory" class="border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 h-16 m-1 flex items-center justify-center">
               <p></p>
