--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div id="navigationBar" class="navigation justify-start
         sm:flex sm:justify-center
         lg:flex lg:justify-start lg:content-bottom">
+        <!-- <img src="Logo.png" alt="Logo"> -->
           <a href="#sports">US</a>
           <a href="#science">Politics</a>
           <a href="#politics">Sports</a>
@@ -120,8 +121,7 @@
             <div id="currentCategory" class="text-3xl uppercase border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 h-16 m-1 flex items-center justify-center mt-5">
               <p>You may also like...</p>
             </div>
-            <div class="articles-wrapper grid grid-cols-5 justify-evenly self-end border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 lg:h-2/6 sm:h-auto">
-
+            <div  onclick="newWindow" class="articles-wrapper grid grid-cols-5 justify-evenly self-end border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 lg:h-2/6 sm:h-auto">
             </div>
             
       </section>
