fixed bug that caused main article image to not load

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       sm:w-full">
 
             <div id="currentCategory" class="text-3xl uppercase border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 h-16 m-1 flex items-center justify-center">
-              <p></p>
+              <p>Home</p>
             </div>
             <!--*This is the section for the main article-->
             <div class="flex flex-col h-3/4 border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 m-1 
