--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div id="navigationBar" class="navigation justify-start
         sm:flex sm:justify-center
         lg:flex lg:justify-start lg:content-bottom">
-          <a href="#sports">US</a>
-          <a href="#science">Politics</a>
-          <a href="#politics">Sports</a>
-          <a href="#economics">Business</a>
-          <a href="#celebrity">Insider</a>
+          <a href="#US">US</a>
+          <a href="#Politics">Politics</a>
+          <a href="#Sports">Sports</a>
+          <a href="#Business">Business</a>
+          <a href="#Insider">Insider</a>
         </div>
         <div class="find
         lg: justify-end">
