added a display if too many requests are made

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
                 </div>
               </div>
             </div>
+          
+
+            <div id="409Modal" style="display: none; top: 50%; left: 50%; transform: translateX(-50%); transform: rotateY(-50%);" class="float-left justify-center modal m-auto pt-14 pb-14 border-2 w-1/5 fixed z-50 top-0 left-0 bg-white ">
+              <div class="">
+                <span id="shut" style="right: 0; top: 0; position: absolute;" class="text-sm font-bold cursor-pointer">&times;</span>
+                  <h3 class="text-center">Too Many Requests! Please wait a minute.</h3>
+              </div>
+            </div>
 
             <!--*this section is for the subarticles, made in JS-->
             <div id="currentCategory" class="text-3xl uppercase border bg-gradient-to-r from-cyan-500 to-cyan-200 border-4 h-16 m-1 flex items-center justify-center mt-5">
@@ -132,7 +140,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span style="right: 0; top: 0; position: absolute;" class="close text-sm font-bold cursor-pointer">&times;</span>
-        <label style=" top: 50%; -ms-transform:translateY(-50%); transform: rotateY(-50%);" />
+        <label style="top: 50%; -ms-transform:translateY(-50%); transform: rotateY(-50%);" />
           <h3 class="text-center">Keep Up With The Latest News!</h3>
           <span class="after:content-['*'] after:ml-0.5 after:text-red-500 block text-sm font-medium text-slate-700 ">
             Name
