deleted some old and unneeded files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
         ></script>
         <link rel="stylesheet" href="assets/css/style.css" />
-        <title>Fast News</title>
+        <title>Swift News</title>
       </head>
 
   <body class="container">
