--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
       <div class="container navbar flex w-full
       sm:grid sm:grid-cols-1
       lg:flex">
+      <div class = "flex flex-row mb-8">
+          <img src="assets/img/Logo.png" alt="Logo"/>
+        </div>
         <div id="navigationBar" class="navigation justify-start
         sm:flex sm:justify-center
         lg:flex lg:justify-start lg:content-bottom">
+
           <a href="#US">US</a>
           <a href="#Politics">Politics</a>
           <a href="#Sports">Sports</a>
